--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <head>
   <title>Gumball Wallpapers</title>
-  <link rel="icon" href="https://github.com/mars650/mars660/blob/main/images/gumball.png">
+  <link rel="icon" href="images/gumball.png">
   <link rel="stylesheet" href="style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
