--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&family=Water+Brush&display=swap"
     rel="stylesheet">
+  <script href="js.js"></script>
 
 </head>
 
