--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  esdsdfe
-  <link [ dfhsie ]
+  <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Water+Brush&display=swap"
     rel="stylesheet">
   <link rel="stylesheet"
@@ -19,7 +18,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&family=Water+Brush&display=swap"
     rel="stylesheet">
-  <script href="js.js"></script>
 
 </head>
 
@@ -99,6 +97,7 @@
 
 
 
+  <script src="js.js"></script>
 
 </body>
 
